[workspace]
resolver = "2"
members = ["crates/f3d1-volta-core"]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Federico Benini <smigolsmigol@protonmail.com>"]
license = "MIT"
repository = "https://github.com/smigolsmigol/f3d1-volta"
rust-version = "1.90"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
