[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "f3d1-volta"
version = "0.0.1"
description = "The keystone of the f3d1 arch: Rust-native concurrent agent execution runtime."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Federico Benini", email = "smigolsmigol@protonmail.com" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "maturin>=1.13",
]

[tool.maturin]
manifest-path = "crates/f3d1-volta-core/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "f3d1_volta._f3d1_volta_core"
python-source = "python"
