[package]
name = "f3d1-volta-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Phase 0 spike: pyo3 + tokio + Python callback interop for the f3d1-volta keystone."

[lib]
name = "_f3d1_volta_core"
crate-type = ["cdylib"]

[dependencies]
# Phase 0.5 consolidation prereq (2026-04-30): bumped from 0.23 to =0.28.3
# (exact pin), aligning with f3dx workspace post-Phase-A. Required for
# wata Phase 0.5 since wata-core needs pyo3 >= 0.28 for arrow-pyarrow 58.x.
pyo3 = { version = "=0.28.3", features = ["extension-module"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync"] }
